force-app/main/default/objects/PricebookNotUsed__c/PricebookNotUsed__c.object-meta.xml
<CustomObject>
    <label>Pricebook ( Not Used)</label>
    <nameField>
        <displayFormat>PB-{000000}</displayFormat>
        <label>Pricebook Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>