force-app/main/default/objects/PricebookNotUsed__c/fields/AskingPriceBaht__c.field-meta.xml
<CustomField>
    <fullName>AskingPriceBaht__c</fullName>
    <description>ราคาเสนอขาย</description>
    <label>Asking Price (Baht)</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>