force-app/main/default/objects/PricebookNotUsed__c/fields/AskingPriceBahtsqm__c.field-meta.xml
<CustomField>
    <fullName>AskingPriceBahtsqm__c</fullName>
    <description>ราคาเสนอขายต่อตารางเมตร</description>
    <label>Asking Price Baht/sq.m.</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>