force-app/main/default/objects/PricebookNotUsed__c/fields/AskingPriceincludePrivateParking__c.field-meta.xml
<CustomField>
    <fullName>AskingPriceincludePrivateParking__c</fullName>
    <description>ราคาเสนอขายรวมที่จอดรถส่วนตัว</description>
    <inlineHelpText>Asking Price include Private Parking (Baht)</inlineHelpText>
    <label>Asking Price include Private Parking</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>