force-app/main/default/objects/PricebookNotUsed__c/fields/AssistantBottomPriceBaht__c.field-meta.xml
<CustomField>
    <fullName>AssistantBottomPriceBaht__c</fullName>
    <description>Bottom Price (Baht) ที่สามารถ approve ได้ด้วย Assistant</description>
    <label>Assistant Bottom Price (Baht)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>