force-app/main/default/objects/PricebookNotUsed__c/fields/BottomPriceBaht__c.field-meta.xml
<CustomField>
    <fullName>BottomPriceBaht__c</fullName>
    <description>ราคาขั้นต่ำที่สามารถขายได้ โดยไม่ต้องขอ Approve</description>
    <label>Bottom Price (Baht)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>