force-app/main/default/objects/PricebookNotUsed__c/fields/BottomPriceBahtsqm__c.field-meta.xml
<CustomField>
    <fullName>BottomPriceBahtsqm__c</fullName>
    <description>ราคาต่อตารางเมตรขั้นต่ำ</description>
    <label>Bottom Price Baht/sq.m.</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>