force-app/main/default/objects/PricebookNotUsed__c/fields/BottomPriceincludePrivateParking__c.field-meta.xml
<CustomField>
    <fullName>BottomPriceincludePrivateParking__c</fullName>
    <description>ราคาขั้นต่ำรวมที่จอดรถส่วนตัว   ddd</description>
    <label>Bottom Price include Private Parking</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>