force-app/main/default/objects/PricebookNotUsed__c/fields/DownPayment__c.field-meta.xml
<CustomField>
    <fullName>DownPayment__c</fullName>
    <formula>DownPaymentPercentage__c * AskingPriceBaht__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Down Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>