force-app/main/default/objects/PricebookNotUsed__c/fields/DownPaymentPercentage__c.field-meta.xml
<CustomField>
    <fullName>DownPaymentPercentage__c</fullName>
    <defaultValue>0.2</defaultValue>
    <description>Percent Down Payment</description>
    <label>Down Payment Percentage</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>