force-app/main/default/objects/PricebookNotUsed__c/fields/DownPerMonth__c.field-meta.xml
<CustomField>
    <fullName>DownPerMonth__c</fullName>
    <description>Down Payment / Maximum Month 
ราคาเงินดาวน์ต่อเดือน(คิดจากจำนวนงวดดาวน์สูงสุด)</description>
    <formula>DownPayment__c / MaximumDownPeriod__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>CEILING(DownPayment__c*100/ MaximumDownPeriod__c)/100</inlineHelpText>
    <label>DownPerMonth</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>