force-app/main/default/objects/PricebookNotUsed__c/fields/HousePrice__c.field-meta.xml
<CustomField>
    <fullName>HousePrice__c</fullName>
    <description>ราคาบ้าน</description>
    <label>House Price</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>