force-app/main/default/objects/PricebookNotUsed__c/fields/IsForeignerPrice__c.field-meta.xml
<CustomField>
    <fullName>IsForeignerPrice__c</fullName>
    <defaultValue>false</defaultValue>
    <description>เป็นราคาของชาวต่างชาติหรือไม่</description>
    <label>Is Foreigner Price</label>
    <type>Checkbox</type>
</CustomField>