force-app/main/default/objects/PricebookNotUsed__c/fields/LandPrice__c.field-meta.xml
<CustomField>
    <fullName>LandPrice__c</fullName>
    <description>ราคาที่ดิน</description>
    <label>Land Price</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>