force-app/main/default/objects/PricebookNotUsed__c/fields/ManagerBottomPriceBaht__c.field-meta.xml
<CustomField>
    <fullName>ManagerBottomPriceBaht__c</fullName>
    <description>Bottom price ที่ manager สามารถ Approve ได้</description>
    <label>Manager Bottom Price (Baht)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>