force-app/main/default/objects/PricebookNotUsed__c/fields/MaximumDownPeriod__c.field-meta.xml
<CustomField>
    <fullName>MaximumDownPeriod__c</fullName>
    <description>จำนวนงวดดาวน์ที่มากที่สุด</description>
    <label>Maximum Down Period</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>