force-app/main/default/objects/PricebookNotUsed__c/fields/PricebookFor__c.field-meta.xml
<CustomField>
    <fullName>PricebookFor__c</fullName>
    <description>เขียนคำอธิบาย Pricebook</description>
    <formula>If(IsForeignerPrice__c,&apos;Foreign Customer&apos;, &apos;Thai customer&apos; )</formula>
    <label>Pricebook For</label>
    <type>Text</type>
</CustomField>