force-app/main/default/objects/PricebookNotUsed__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <description>ชื่อ Project ที่ Unit อยู่</description>
    <formula>UnitNumber__r.Project__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project</label>
    <type>Text</type>
</CustomField>