force-app/main/default/objects/PricebookNotUsed__c/fields/ProjectType__c.field-meta.xml
<CustomField>
    <fullName>ProjectType__c</fullName>
    <description>ประเภทของ Project</description>
    <formula>TEXT(UnitNumber__r.ProjectType__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Type</label>
    <type>Text</type>
</CustomField>