force-app/main/default/objects/PricebookNotUsed__c/fields/Reservation__c.field-meta.xml
<CustomField>
    <fullName>Reservation__c</fullName>
    <defaultValue>150000</defaultValue>
    <label>Reservation</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>