force-app/main/default/objects/PricebookNotUsed__c/fields/ReservationandContractPercentage__c.field-meta.xml
<CustomField>
    <fullName>ReservationandContractPercentage__c</fullName>
    <defaultValue>0.1</defaultValue>
    <description>Percent Reservation and Contract</description>
    <label>Reservation and Contract Percentage</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>