force-app/main/default/objects/PricebookNotUsed__c/fields/SumOfPercentage__c.field-meta.xml
<CustomField>
    <fullName>SumOfPercentage__c</fullName>
    <description>Sum of Reservation and Contract Percentage, Down Payment Percentage and Transfer Ownership Percentage</description>
    <formula>(ReservationandContractPercentage__c*100)+(DownPaymentPercentage__c*100) + (TransferOwnershipPercentage__c*100)</formula>
    <label>Sum Of Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>