force-app/main/default/objects/PricebookNotUsed__c/fields/TransferOwnership__c.field-meta.xml
<CustomField>
    <fullName>TransferOwnership__c</fullName>
    <formula>AskingPriceBaht__c - Reservation__c - Contract__c - DownPayment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transfer Ownership</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>