force-app/main/default/objects/PricebookNotUsed__c/fields/TransferOwnershipPercentage__c.field-meta.xml
<CustomField>
    <fullName>TransferOwnershipPercentage__c</fullName>
    <defaultValue>0.7</defaultValue>
    <description>Percent Transfer Ownership</description>
    <label>Transfer Ownership Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>