force-app/main/default/objects/PricebookNotUsed__c/fields/UnitNumber__c.field-meta.xml
<CustomField>
    <fullName>UnitNumber__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>เลขที่ Unit</description>
    <label>Unit Number</label>
    <referenceTo>Unit__c</referenceTo>
    <relationshipName>Pricebooks</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>