force-app/main/default/objects/PricebookNotUsed__c/fields/VPBottomPriceBaht__c.field-meta.xml
<CustomField>
    <fullName>VPBottomPriceBaht__c</fullName>
    <description>Bottom Price (Baht) ที่ MD ต้องเริ่ม Approve</description>
    <label>VP Bottom Price (Baht)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>