force-app/main/default/objects/PricebookNotUsed__c/validationRules/AskingPriceCannotBeLowerThanBottom.validationRule-meta.xml
<ValidationRule>
    <fullName>AskingPriceCannotBeLowerThanBottom</fullName>
    <active>true</active>
    <errorConditionFormula>AskingPriceBaht__c &lt; BottomPriceBaht__c</errorConditionFormula>
    <errorMessage>Asking Price cannot be lower than Bottom Price</errorMessage>
</ValidationRule>