force-app/main/default/objects/PricebookNotUsed__c/validationRules/HouseAddLandPriceEqualAskingPrice.validationRule-meta.xml
<ValidationRule>
    <fullName>HouseAddLandPriceEqualAskingPrice</fullName>
    <active>true</active>
    <description>Asking price = House price+Land price</description>
    <errorConditionFormula>AskingPriceBaht__c != HousePrice__c + LandPrice__c</errorConditionFormula>
    <errorMessage>House Price + Land Price must be equal Asking Price</errorMessage>
</ValidationRule>