force-app/main/default/objects/PricebookNotUsed__c/validationRules/PercentageMustBeSummedUpto100.validationRule-meta.xml
<ValidationRule>
    <fullName>PercentageMustBeSummedUpto100</fullName>
    <active>false</active>
    <errorConditionFormula>ReservationandContractPercentage__c + DownPaymentPercentage__c  + TransferOwnershipPercentage__c !=1</errorConditionFormula>
    <errorMessage>The total percentage must equal to 100%
(Reservation, Contract, DownPayment, TransferOwnership)</errorMessage>
</ValidationRule>