force-app/main/default/objects/PricebookNotUsed__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>IsForeignerPrice__c</columns>
    <columns>UnitNumber__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Pricebook</label>
</ListView>